--- a/app/assets/stylesheets/framework/variables.scss
+++ b/app/assets/stylesheets/framework/variables.scss
@@ -475,6 +475,7 @@ $gl-line-height-18: 18px;
 $gl-line-height-20: 20px;
 $gl-line-height-24: 24px;
 $gl-line-height-14: 14px;
+$nav-active-bg: var(--nav-active-bg, rgba($black, 0.08)) !important;
 
 $pages-group-name-color: #4c4e54;
 
