--- a/ee/app/assets/stylesheets/startup/startup-general.scss
+++ b/ee/app/assets/stylesheets/startup/startup-general.scss
@@ -1058,7 +1058,7 @@ input {
   margin: 0 auto;
 }
 .nav-sidebar.sidebar-collapsed-desktop li.active:not(.fly-out-top-item) > a {
-  background-color: var(--nav-active-bg);
+  background-color: rgba(41, 41, 97, 0.08);
 }
 .nav-sidebar a {
   text-decoration: none;
@@ -1089,7 +1089,7 @@ input {
   font-weight: 600;
 }
 .nav-sidebar li.active:not(.fly-out-top-item) > a:not(.has-sub-items) {
-  background-color: var(--nav-active-bg);
+  background-color: rgba(41, 41, 97, 0.08);
 }
 .nav-sidebar ul {
   padding-left: 0;
@@ -1250,7 +1250,7 @@ input {
   .nav-sidebar:not(.sidebar-expanded-mobile)
     li.active:not(.fly-out-top-item)
     > a {
-    background-color: var(--nav-active-bg);
+    background-color: rgba(41, 41, 97, 0.08);
   }
   .nav-sidebar:not(.sidebar-expanded-mobile) .context-header {
     height: 60px;
