Ensure Code Intelligence works with Highlight.js
Ensures Code Intelligence works with Highlight.js

--- a/app/assets/stylesheets/framework/files.scss
+++ b/app/assets/stylesheets/framework/files.scss
@@ -506,6 +506,10 @@ span.idiff {
   text-indent: -$grid-size * 2;
 }
 
+.blob-viewer .code-navigation-popover .code {
+  text-indent: $grid-size * 2;
+}
+
 .tree-item-link {
   &:not(.is-submodule) {
     span {
