--- a/app/views/clusters/clusters/connect.html.haml
+++ b/app/views/clusters/clusters/connect.html.haml
@@ -5,7 +5,7 @@
 
 .gl-md-display-flex.gl-mt-3
   .gl-w-quarter.gl-xs-w-full.gl-flex-shrink-0.gl-md-mr-5
-    = render 'sidebar'
+    = render 'sidebar', is_connect_page: true
   .gl-w-full
     #js-cluster-new{ data: js_cluster_new }
     = render 'clusters/clusters/user/form'
