--- a/app/views/clusters/clusters/new.html.haml
+++ b/app/views/clusters/clusters/new.html.haml
@@ -8,7 +8,7 @@
 
 .gl-md-display-flex.gl-mt-3
   .gl-w-quarter.gl-xs-w-full.gl-flex-shrink-0.gl-md-mr-5
-    = render 'sidebar'
+    = render 'sidebar', is_connect_page: false
   .gl-w-full
     = render 'clusters/clusters/cloud_providers/cloud_provider_selector'
 
