--- a/ee/app/views/shared/_user_over_limit_free_plan_alert.html.haml
+++ b/ee/app/views/shared/_user_over_limit_free_plan_alert.html.haml
@@ -10,13 +10,13 @@
                     feature_id: Users::GroupCalloutsHelper::PREVIEW_USER_OVER_LIMIT_FREE_PLAN_ALERT,
                     group_id: source.root_ancestor.id,
                     testid: 'user-over-limit-free-plan-alert' },
-      title: _('From June 22, 2022 (GitLab 15.1), free personal namespaces and top-level groups will be limited to %{free_limit} members') % { free_limit: ::Plan::FREE_USER_LIMIT },
+      title: _('From June 22, 2022 (GitLab 15.1), free personal namespaces and top-level groups will be limited to %{free_limit} members') % { free_limit: ::Namespaces::FreeUserCap::FREE_USER_LIMIT },
       close_button_data: { track_action: 'dismiss_banner',
                            track_label: 'user_limit_banner',
                            testid: 'user-over-limit-free-plan-dismiss' } do
       .gl-alert-body
         = _('Your %{doc_link_start}namespace%{doc_link_end}, %{strong_start}%{namespace_name}%{strong_end} has more than %{free_limit} members. From June 22, 2022, it will be limited to %{free_limit}, and the remaining members will get a %{link_start}status of Over limit%{link_end} and lose access to the namespace. You can go to the Usage Quotas page to manage which %{free_limit} members will remain in your namespace. To get more members, an owner can start a trial or upgrade to a paid tier.').html_safe % { namespace_name: source.root_ancestor.name,
-          free_limit: ::Plan::FREE_USER_LIMIT,
+          free_limit: ::Namespaces::FreeUserCap::FREE_USER_LIMIT,
           doc_link_start: '<a href="%{url}" target="_blank" rel="noopener noreferrer">'.html_safe % { url: help_page_path('user/group/index', anchor: 'namespaces') },
           doc_link_end: '</a>'.html_safe,
           strong_start: "<strong>".html_safe,
