--- a/app/views/projects/blob/_upload.html.haml
+++ b/app/views/projects/blob/_upload.html.haml
@@ -15,10 +15,9 @@
                 #{ dropzone_text.html_safe }
 
           %br
-          = render 'shared/global_alert',
-            variant: :danger,
+          = render Pajamas::AlertComponent.new(variant: :danger,
             alert_class: 'dropzone-alerts gl-alert gl-alert-danger gl-mb-5 data gl-display-none',
-            dismissible: false
+            dismissible: false)
 
           = render 'shared/new_commit_form', placeholder: placeholder, ref: local_assigns[:ref]
 
