--- a/ee/app/views/groups/usage_quotas/_product_purchase_success_alert.html.haml
+++ b/ee/app/views/groups/usage_quotas/_product_purchase_success_alert.html.haml
@@ -1,6 +1,5 @@
-= render 'shared/global_alert',
-  title: _('Thanks for your purchase!'),
+= render Pajamas::AlertComponent.new(title: _('Thanks for your purchase!'),
   variant: :success,
-  close_button_data: { testid: 'close-product-purchase-success' } do
+  close_button_data: { testid: 'close-product-purchase-success' }) do
   .gl-alert-body
     = _('You have successfully purchased %{product}. You\'ll receive a receipt by email. Your purchase may take a minute to sync, so refresh the page if you don\'t see it yet.') % { product: product_name }
