--- a/ee/app/views/profiles/personal_access_tokens/_token_expiry_notification.html.haml
+++ b/ee/app/views/profiles/personal_access_tokens/_token_expiry_notification.html.haml
@@ -3,10 +3,11 @@
 - expired_tokens = active_tokens.select(&:expired_but_not_enforced?)
 - return unless expired_tokens.present?
 
-= render 'shared/global_alert',
-  title: n_('%d token has expired', '%d tokens have expired', expired_tokens.size) % expired_tokens.size,
+= render Pajamas::AlertComponent.new(title: n_('%d token has expired', '%d tokens have expired', expired_tokens.size) % expired_tokens.size,
   alert_class: 'gl-mb-3 js-token-expiry-callout',
-  alert_data: { feature_id: "profile_personal_access_token_expiry", dismiss_endpoint: callouts_path, defer_links: 'true' },
-  variant: :danger do
+  alert_data: { feature_id: "profile_personal_access_token_expiry",
+                dismiss_endpoint: callouts_path,
+                defer_links: 'true' },
+  variant: :danger) do
   .gl-alert-body
     = _('Until revoked, expired personal access tokens pose a security risk.')
