--- a/ee/app/views/projects/services/gitlab_slack_application/_top.html.haml
+++ b/ee/app/views/projects/services/gitlab_slack_application/_top.html.haml
@@ -1,6 +1,5 @@
 - if session.delete(:slack_install_success)
-  = render 'shared/global_alert',
-    title: s_('SlackIntegration|GitLab for Slack was successfully installed.'),
-    variant: :success do
+  = render Pajamas::AlertComponent.new(title: s_('SlackIntegration|GitLab for Slack was successfully installed.'),
+    variant: :success) do
     .gl-alert-body
       = s_('SlackIntegration|You can now close this window and go to your Slack workspace.')
