--- a/app/views/shared/empty_states/_merge_requests.html.haml
+++ b/app/views/shared/empty_states/_merge_requests.html.haml
@@ -10,7 +10,7 @@
 .row.empty-state.merge-requests
   .col-12
     .svg-content
-      = image_tag 'illustrations/merge_requests.svg'
+      = image_tag 'illustrations/merge_requests.svg', { auto_dark: true }
   .col-12
     .text-content
       - if has_filter_bar_param?
