--- a/ee/app/views/registrations/company/new.html.haml
+++ b/ee/app/views/registrations/company/new.html.haml
@@ -5,7 +5,7 @@
     %h2.gl-pb-5.gl-my-0
       = _("About your company")
 
-    #js-company-registration-form{ data: { trial: params[:trial] == 'true', create_lead_path: create_lead_trials_path } }
+    #js-company-registration-form{ data: create_company_form_data }
 
   .col-md-4.gl-display-inline-flex.gl-vertical-align-middle
     = image_tag 'illustrations/saas-trial-illustration.svg', alt: '', class: 'gl-display-none d-md-inline gl-w-full'
