--- a/app/views/admin/application_settings/_ci_cd.html.haml
+++ b/app/views/admin/application_settings/_ci_cd.html.haml
@@ -106,6 +106,9 @@
                 = f.label :ci_active_jobs, s_('AdminSettings|Total number of jobs in currently active pipelines')
                 = f.number_field :ci_active_jobs, class: 'form-control gl-form-input'
               .form-group
+                = f.label :ci_active_pipelines, s_('AdminSettings|Maximum number of active pipelines per project')
+                = f.number_field :ci_active_pipelines, class: 'form-control gl-form-input'
+              .form-group
                 = f.label :ci_project_subscriptions, s_('AdminSettings|Maximum number of pipeline subscriptions to and from a project')
                 = f.number_field :ci_project_subscriptions, class: 'form-control gl-form-input'
               .form-group
