Added deprecation notice to cluster creation pages
As we already deprecated the certificate-based cluster connection,
we add a deprecation notice to cluster creation and connection pages.

Changelog: added

--- a/app/views/clusters/clusters/new.html.haml
+++ b/app/views/clusters/clusters/new.html.haml
@@ -4,6 +4,8 @@
 - page_title _('Create a Kubernetes cluster')
 - provider = params[:provider]
 
+= render 'deprecation_alert'
+
 = render_gcp_signup_offer
 
 .gl-md-display-flex.gl-mt-3
