--- a/app/views/clusters/clusters/connect.html.haml
+++ b/app/views/clusters/clusters/connect.html.haml
@@ -3,6 +3,8 @@
 - breadcrumb_title _('Connect a cluster')
 - page_title _('Connect a Kubernetes Cluster')
 
+= render 'deprecation_alert'
+
 .gl-md-display-flex.gl-mt-3
   .gl-w-quarter.gl-xs-w-full.gl-flex-shrink-0.gl-md-mr-5
     = render 'sidebar', is_connect_page: true
