--- a/ee/app/views/groups/epics/show.html.haml
+++ b/ee/app/views/groups/epics/show.html.haml
@@ -37,42 +37,37 @@
     'data-roadmap-element-selector' => "##{roadmapElementID}",
     'data-container-element-selector' => ".#{containerClass}" }
 
-  .epic-tabs-content.js-epic-tabs-content
-    %div{ id: treeElementID, class: ['tab-pane', 'show', 'active'] }
-      .row
-        %section.col-md-12
-          #js-tree{ data: { id: @epic.to_global_id,
-            numerical_id: @epic.id,
-            iid: @epic.iid,
-            group_name: @group.name,
-            group_id: @group.id,
-            full_path: @group.full_path,
-            auto_complete_epics: allow_sub_epics,
-            auto_complete_issues: 'true',
-            user_signed_in: current_user.present? ? 'true' : 'false',
-            allow_issuable_health_status: allow_issuable_health_status,
-            allow_scoped_labels: allow_scoped_labels,
-            allow_sub_epics: allow_sub_epics,
-            initial: issuable_initial_data(@epic).to_json } }
-    - if sub_epics_feature_available
-      %div{ id: roadmapElementID, class: ['tab-pane', 'gl-display-none'] }
-        .row
-          %section.col-md-12
-            #js-roadmap{ data: { epics_path: group_epics_path(@group, parent_id: @epic.id, format: :json),
-              group_id: @group.id,
-              iid: @epic.iid,
-              full_path: @group.full_path,
-              empty_state_illustration: image_path('illustrations/epics/roadmap.svg'),
-              has_filters_applied: 'false',
-              new_epic_path: new_group_epic_path(@group),
-              list_epics_path: group_epics_path(@group),
-              epics_docs_path: help_page_path('user/group/epics/index'),
-              preset_type: roadmap_layout,
-              epics_state: 'all',
-              sorted_by: roadmap_sort_order,
-              inner_height: '600',
-              child_epics: 'true' } }
 
+  %div{ id: treeElementID, class: ['tab-pane', 'show', 'active'] }
+    .row
+      %section.col-md-12
+        #js-tree{ data: { id: @epic.to_global_id,
+          numerical_id: @epic.id,
+          iid: @epic.iid,
+          group_name: @group.name,
+          group_id: @group.id,
+          full_path: @group.full_path,
+          auto_complete_epics: allow_sub_epics,
+          auto_complete_issues: 'true',
+          user_signed_in: current_user.present? ? 'true' : 'false',
+          allow_issuable_health_status: allow_issuable_health_status,
+          allow_scoped_labels: allow_scoped_labels,
+          allow_sub_epics: allow_sub_epics,
+          initial: issuable_initial_data(@epic).to_json,
+          roadmap_app_data: sub_epics_feature_available ? { epics_path: group_epics_path(@group, parent_id: @epic.id, format: :json),
+            group_id: @group.id,
+            iid: @epic.iid,
+            full_path: @group.full_path,
+            empty_state_illustration: image_path('illustrations/epics/roadmap.svg'),
+            has_filters_applied: false,
+            new_epic_path: new_group_epic_path(@group),
+            list_epics_path: group_epics_path(@group),
+            epics_docs_path: help_page_path('user/group/epics/index'),
+            preset_type: roadmap_layout,
+            epics_state: 'all',
+            sorted_by: roadmap_sort_order,
+            inner_height: '600',
+            child_epics: true }.to_json : 'null' } }
   - if related_epics_feature_available && Feature.enabled?(:related_epics_widget, @group, default_enabled: :yaml)
     #js-related-epics{ data: { endpoint: group_epic_related_epic_links_path(@group, @epic),
       can_add_related_epics: "#{can?(current_user, :admin_related_epic_link, @epic)}",
