Improve comments webhooks description
Webhooks for comments (notes) are not only triggered in issues
but also in merge requests.

--- a/app/views/shared/web_hooks/_form.html.haml
+++ b/app/views/shared/web_hooks/_form.html.haml
@@ -33,7 +33,7 @@
       = form.label :note_events, class: 'list-label form-check-label gl-ml-1' do
         %strong= s_('Webhooks|Comments')
       %p.text-muted.gl-ml-1
-        = s_('Webhooks|A comment is added to an issue.')
+        = s_('Webhooks|A comment is added to an issue or merge request.')
     %li
       = form.check_box :confidential_note_events, class: 'form-check-input'
       = form.label :confidential_note_events, class: 'list-label form-check-label gl-ml-1' do
