Fix vertical spacing in enhanced_notify_css emails
- Addresses https://gitlab.com/gitlab-org/gitlab/-/issues/355907#note_894838163
- Exposes gl-mt-5 and gl-mb-5 in notify_enhanced.scss. These classes
  should have no effect when the :enhanced_notify_css feature flag
  is off.

Approach:

- p tags outside `.md` already have padding
- div tags outside `.md` do not
- Remove our globally applied padding from `.md`
- Use `gl-mb-5` on conditionally applied `div` before `.md`
- Use `gl-mt-5` on the `.md` if it definitely comes after a `div`

--- a/app/assets/stylesheets/notify_enhanced.scss
+++ b/app/assets/stylesheets/notify_enhanced.scss
@@ -26,11 +26,15 @@ a {
   text-decoration: none;
 }
 
-.content {
-  .md {
-    padding: 1rem 0;
-  }
+.gl-mb-5 {
+  @include gl-mb-5;
+}
 
+.gl-mt-5 {
+  @include gl-mt-5;
+}
+
+.content {
   hr {
     border: 1px solid #e1e1e1;
   }
