--- a/app/views/groups/group_members/index.html.haml
+++ b/app/views/groups/group_members/index.html.haml
@@ -1,6 +1,8 @@
 - add_page_specific_style 'page_bundles/members'
 - page_title _('Group members')
 
+= render_if_exists 'shared/user_over_limit_free_plan_alert', source: @group
+
 .row.gl-mt-3
   .col-lg-12
     .gl-display-flex.gl-flex-wrap
