Update locked tooltip for project runners
Changelog: changed

--- a/app/views/projects/runners/_runner.html.haml
+++ b/app/views/projects/runners/_runner.html.haml
@@ -8,7 +8,7 @@
         %span
           = "##{runner.id} (#{runner.short_sha})"
       - if runner.locked?
-        %span.has-tooltip{ title: _('Locked to current projects') }
+        %span.has-tooltip{ title: s_('Runners|Runner is locked and available for currently assigned projects only. Only administrators can change the assigned projects.') }
           = sprite_icon('lock')
     .gl-ml-2
       .btn-group.btn-group-sm
