--- a/app/views/projects/diffs/_diffs.html.haml
+++ b/app/views/projects/diffs/_diffs.html.haml
@@ -24,7 +24,7 @@
       .btn-group.gl-ml-3
         = inline_diff_btn
         = parallel_diff_btn
-    = render 'projects/diffs/stats', diff_files: diff_files
+    = render Diffs::StatsComponent.new(diff_files: diff_files)
 
 - if render_overflow_warning?(diffs)
   = render 'projects/diffs/warning', diff_files: diffs
