--- a/ee/app/views/groups/security/policies/index.html.haml
+++ b/ee/app/views/groups/security/policies/index.html.haml
@@ -1,10 +1,9 @@
 - breadcrumb_title _("Policies")
-- disable_security_policy_project = !can_update_security_orchestration_policy_project?(group)
 - @content_wrapper_class = 'js-security-policies-container-wrapper'
 
 #js-group-security-policies-list{ data: { group_path: group.full_path,
-  assigned_policy_project: assigned_policy_project(group).to_json,
-  disable_security_policy_project: disable_security_policy_project.to_s,
+  assigned_policy_project: 'null',
+  disable_security_policy_project: false.to_s,
   new_policy_path: new_group_security_policy_path(group),
   empty_filter_svg_path: image_path('illustrations/issues.svg'),
   empty_list_svg_path: image_path('illustrations/security-dashboard_empty.svg'),
