--- a/app/views/notify/_note_email.html.haml
+++ b/app/views/notify/_note_email.html.haml
@@ -2,7 +2,7 @@
 - diff_limit = local_assigns.fetch(:diff_limit, nil)
 - target_url = local_assigns.fetch(:target_url, @target_url)
 - note_style = local_assigns.fetch(:note_style, "")
-- skip_stylesheet_link = local_assigns.fetch(:skip_stylesheet_link, false)
+- include_stylesheet_link = local_assigns.fetch(:include_stylesheet_link, true)
 
 - discussion = local_assigns.fetch(:discussion) { note.discussion } if note.part_of_discussion?
 
@@ -22,10 +22,9 @@
       - else
         = link_to 'discussion', target_url
 
-- if discussion&.diff_discussion? && discussion.on_text?
-  - unless skip_stylesheet_link
-    = content_for :head do
-      = stylesheet_link_tag 'mailers/highlighted_diff_email'
+- if include_stylesheet_link && discussion&.diff_discussion? && discussion.on_text?
+  = content_for :head do
+    = stylesheet_link_tag 'mailers/highlighted_diff_email'
 
   %table.code.gl-mb-5
     = render partial: "projects/diffs/email_line",
