--- a/app/views/notify/new_review_email.html.haml
+++ b/app/views/notify/new_review_email.html.haml
@@ -1,5 +1,6 @@
-= content_for :head do
-  = stylesheet_link_tag 'mailers/highlighted_diff_email'
+- if @include_diff_discussion_stylesheet
+  = content_for :head do
+    = stylesheet_link_tag 'mailers/highlighted_diff_email'
 
 %table{ border: "0", cellpadding: "0", cellspacing: "0", style: "width:100%;margin:0 auto;border-collapse:separate;border-spacing:0;" }
   %tbody
@@ -22,4 +23,4 @@
                   -# Preload project for discussions first note
                   - discussion.first_note.project = @project if discussion&.first_note
                   - target_url = project_merge_request_url(@project, @merge_request, anchor: "note_#{note.id}")
-                  = render 'note_email', note: note, diff_limit: 3, target_url: target_url, note_style: "border-bottom:1px solid #ededed;", skip_stylesheet_link: true, discussion: discussion
+                  = render 'note_email', note: note, diff_limit: 3, target_url: target_url, note_style: "border-bottom:1px solid #ededed;", include_stylesheet_link: false, discussion: discussion
