--- a/app/views/clusters/clusters/_deprecation_alert.html.haml
+++ b/app/views/clusters/clusters/_deprecation_alert.html.haml
@@ -1,5 +1,4 @@
-.gl-alert.gl-alert-warning.gl-mt-6{ role: 'alert' }
-  = sprite_icon('warning', css_class: "gl-alert-icon gl-alert-icon-no-title gl-icon")
+= render 'shared/global_alert', variant: :warning, dismissible: false, alert_class: 'gl-mt-6 gl-mb-3' do
   .gl-alert-body
     - link_start = '<a href="%{url}" target="_blank" rel="noopener noreferrer">'.html_safe
     - issue_link_start = link_start % { url: 'https://gitlab.com/gitlab-org/configure/general/-/issues/199' }
